Nov-03-2006  Yen-Ju Chen
	* Compile on Cocoa.


Nov-02-2006  Guenther Noack
	* Added code for RSSFeed storage

Nov-01-2006  Guenther Noack
	* Fixed creation of articles without proper 'alternate' link.

Nov-01-2006  Yen-Ju Chen
	* Compile on Cocoa.
	* Fix missing url to article.

Oct-30-2006  Guenther Noack
	* Fixed URL loading bug for the storage
	* Added RSSLink class and subclasses (see RSSLinks.h). These classes
	  replace NSURL for the storage of links from articles.	

Oct-29-2006  Yen-Ju Chen
	* Tidy up a little.

Oct-25-2006  Yen-Ju Chen

	* Merge back from branch.

Oct-22-2006  Yen-Ju Chen

	* Support loading feed in background.

Oct-21-2006  Yen-Ju Chen

	* Initial branch.
	* Compile on Cocoa.

Oct-9-2006  Guenther Noack
	Added code to store articles as property lists

Sep-26-2006  Quentin Mathe <qmathe@club-internet.fr>
	* GNUmakefile: Modified to include 'etoile.make'.

Sep-25-2006  Guenther Noack
	Relicensed to LGPL

Jul-7-2006 to Jul-11-2006  Guenther Noack
	Fixed compile error submitted by YunSong Hwang (Thank you!)

	For everybody who knows the RSSKit code, here are the changes I
	did in restructuring:

	In the old version anything related to parsing was in the
	RSSFeed+Fetching category. The file for this category also
	included the class RSSArticleCreationListener which accepts
	the different article components (Title, Content, Links etc.)
	and puts them together after that. When the parser (in RSSFeed)
	told the instance of RSSArticleCreationListener to '-finish',
	it submitted the collected articles back to the feed.

	The new version is more taken apart now:
	* RSSArticleCreationListener now has its own .m and .h files.
	  The class was also renamed to RSSArticleConstructor to avoid
	  naming confusion with the planned protocol that accepts newly
	  created articles from it.
	* The parsers are now located in their own classes. Here's the
	  class hierarchy:
	  
	  - RSSArticleConstructor
	    - FeedParser
	      - AtomParser